postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tlipper-postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: tlipper-postgres
  template:
    metadata:
      labels:
        component: tlipper-postgres
    spec:
      volumes:
        - name: tlipper-postgres-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: tlipper-postgres
          image: postgres
          ports:
            - containerPort: 5431
          volumeMounts:
            - name: tlipper-postgres-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
