tlipper-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: tlipper-server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: tlipper-server
  template:
    metadata:
      labels:
        component: tlipper-server
    spec:
      containers:
        - name: tlipper-server
          image: yigitozkavci/tlipper-server:0.1.3
          ports:
            - containerPort: 8080
