tlipper-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tlipper-ui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: tlipper-ui
  template:
    metadata:
      labels:
        component: tlipper-ui
    spec:
      containers:
        - name: tlipper-ui
          image: yigitozkavci/tlipper-ui:0.1.1
          ports:
            - containerPort: 5000
