tlipper-grafana-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tlipper-grafana-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: tlipper-grafana
  ports:
    - port: 3000
      targetPort: 3000
