tlipper-server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tlipper-server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: tlipper-server
  ports:
    - port: 8080
      targetPort: 8080
