tlipper-ui-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tlipper-ui-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: tlipper-ui
  ports:
    - port: 5000
      targetPort: 5000
