backend-ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress-service
spec:
  rules:
    - host: tlipper
      http:
        paths:
          - pathType: Prefix
            path: "/app/"
            backend:
              service:
                name: tlipper-server-cluster-ip-service
                port:
                  number: 8080
    - host: tlipper
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: tlipper-ui-cluster-ip-service
                port:
                  number: 5000
    - host: grafana
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: tlipper-grafana-cluster-ip-service
                port:
                  number: 3000
